3.3 fix
